feat: add route for token generation and api authorization
