# docs/swagger.json
@@ -4,6 +4,51 @@
         "contact": {}
     },
     "paths": {
+        "/auth": {
+            "post": {
+                "description": "Generate token jwt for API authorization",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authorization Token"
+                ],
+                "parameters": [
+                    {
+                        "description": "Request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/pkg.CredentialsAuth"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.SendSuccessAuthResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.SendErrorAuthResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.SendErrorAuthResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/cep": {
             "get": {
                 "description": "Search Address by CEP",
@@ -31,25 +76,31 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/pkg.sendSuccessResponse"
+                            "$ref": "#/definitions/pkg.SendSuccessCEPResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/pkg.sendErrorResponse"
+                            "$ref": "#/definitions/pkg.SendErrorCEPResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.SendErrorAuthResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/pkg.sendErrorResponse"
+                            "$ref": "#/definitions/pkg.SendErrorCEPResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/pkg.sendErrorResponse"
+                            "$ref": "#/definitions/pkg.SendErrorCEPResponse"
                         }
                     }
                 }
@@ -85,7 +136,18 @@
                 }
             }
         },
-        "pkg.sendErrorResponse": {
+        "pkg.CredentialsAuth": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "pkg.SendErrorAuthResponse": {
             "type": "object",
             "properties": {
                 "errorCode": {
@@ -96,7 +158,26 @@
                 }
             }
         },
-        "pkg.sendSuccessResponse": {
+        "pkg.SendErrorCEPResponse": {
+            "type": "object",
+            "properties": {
+                "errorCode": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "pkg.SendSuccessAuthResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "pkg.SendSuccessCEPResponse": {
             "type": "object",
             "properties": {
                 "data": {
